feature(jdk-17): Fixing compilation (deprecated Integer constructor)